--- a/style.css
+++ b/style.css
@@ -27,10 +27,10 @@ ul{
 main{
     justify-content: center;
     flex-direction: row;
-    margin: 1rem;
-    display: flex;
-    grid-template-columns: 33% 1fr;
-    grid-gap: 1rem;
+    /* margin: 1rem; */
+    
+    /* grid-template-columns: 33% 1fr; */
+    /* grid-gap: 1rem; */
 }
 .personal, .skills, .languages{
     padding: 1rem;
@@ -55,7 +55,12 @@ main{
     bottom: 0;
     left: 1rem;
 }
-
+.left {
+    width: 60%;
+}
+.right{
+    width: 40%;
+}
 
 .experience , .education{
     line-height: 2;
@@ -104,18 +109,7 @@ footer i{
 img.hautdp {
     position: fixed;
 }
-@media screen and (max-width: 568px) {
-    main{
-        flex-direction: column;
-        margin: 0;
-}
-    .left, .right{
-        width: 100%;
-    }
-    .btn{
-        right: 40px;
-    }
-}
+
 
 .label {
     background-color: #111;
@@ -158,7 +152,31 @@ img.hautdp {
 .lineshadow{
     filter: drop-shadow(0 0 0.4rem black);
 }
-.border {
-    border: 1px solid lawngreen;
+.container {
+    border: 1px solid black;
+    display: flex;
+    width: 100%;
+    margin: auto;
     
+}
+
+
+
+
+@media screen and (max-width: 568px) {
+    main{
+        flex-direction: column;
+        margin: 0;
+}
+    .left, .right{
+        width: 100%;
+    }
+    .btn{
+        right: 40px;
+    }
+    .container{
+        width: 100%;
+        margin: inherit;
+        flex-direction: column;
+    }
 }
