--- a/style.css
+++ b/style.css
@@ -15,10 +15,13 @@ body.dark{
     background-color: #292c35;
     color: #ffffff;
 }
-
-h2{
-    color: #fff;
+h1 , h3{
+    text-align: center;
 }
+h2{
+    color:black;
+}
+
 
 ul{
     list-style: none;
@@ -32,6 +35,14 @@ main{
     /* grid-template-columns: 33% 1fr; */
     /* grid-gap: 1rem; */
 }
+.container {
+    border: 2px solid black;
+    display: flex;
+    width: 100%;
+    margin: auto;
+    max-width: 1400px;
+}
+
 .personal, .skills, .languages{
     padding: 1rem;
     line-height: 2;
@@ -42,24 +53,26 @@ main{
 } */
 
 .left-image img{
-    width: 100%;
+    width: 60%;
+    border-radius: 50%;
+    justify-content: center;
+    margin: 2em;
 }
 
-
-
-.left-image{
-    position: relative;
-}
 .left-image h2{
     position: absolute;
     bottom: 0;
     left: 1rem;
 }
+div.buttom{
+    display: flex;
+    justify-content: space-around;
+}
 .left {
-    width: 60%;
+    width: 30%;
 }
 .right{
-    width: 40%;
+    width: 70%;
 }
 
 .experience , .education{
@@ -85,9 +98,9 @@ main{
 i {
     color: green;
 }
-footer{
+.footer{
     background-color: green;
-    padding: 2rem 0;
+    padding: 1rem 0;
     text-align: center;
     line-height: 1.5;
     color: #fff;
@@ -152,13 +165,7 @@ img.hautdp {
 .lineshadow{
     filter: drop-shadow(0 0 0.4rem black);
 }
-.container {
-    border: 1px solid black;
-    display: flex;
-    width: 100%;
-    margin: auto;
-    
-}
+
 
 
 
@@ -179,4 +186,10 @@ img.hautdp {
         margin: inherit;
         flex-direction: column;
     }
+}
+
+.footer{
+    max-width: 1400px;
+    margin: auto;
+    border: 2px solid black;
 }
