modification du style personnel

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    text-decoration: none;
     font-family: "Roboto", sans-serif;
 }
 body{
@@ -26,6 +27,11 @@ h2{
 ul{
     list-style: none;
 }
+
+a {
+    color:black;
+}
+
 
 main{
     justify-content: center;
