--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body{
     box-sizing: border-box;
     text-decoration: none;
     font-family: "Roboto", sans-serif;
+    transition: all 0.2s ease-out;
 }
 body{
     background-color: gainsboro;
